Adding Jackson Model generation and a test harness that acts as a living documentation of the supported permutations.

--- a/src/test/resources/examples/nullableListTypes/api.yaml
+++ b/src/test/resources/examples/nullableListTypes/api.yaml
@@ -1,16 +1,14 @@
 openapi: 3.0.0
 components:
   schemas:
-    Organisation:
+    NullableListTypes:
       type: object
       required:
         - name
       properties:
         name:
           type: string
-        icon:
-          type: string
-        hooks:
+        tags:
           type: array
           items:
-            $ref: "#/components/schemas/Webhook"
+            type: string
