Issue #9: Move the creation of the URI Location to the service layer

--- a/src/test/resources/examples/customerExampleApi/open-api/api.yaml
+++ b/src/test/resources/examples/customerExampleApi/open-api/api.yaml
@@ -156,6 +156,10 @@ paths:
           headers:
             Location:
               $ref: '#/components/headers/Location'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/DataAccessRequest'
           description: DataAccessRequest successfully created
         429:
           description: User requests are being throttled
