ISSUE#23 Ensures enums are only generated for x-extensible-enum definitions when the option is enabled

--- a/src/test/resources/examples/enumPolymorphicDiscriminator/api.yaml
+++ b/src/test/resources/examples/enumPolymorphicDiscriminator/api.yaml
@@ -34,7 +34,7 @@ components:
 
     EnumDiscriminator:
       type: string
-      x-extensible-enum:
+      enum:
         - obj_one
         - obj_two
 
