--- a/src/test/resources/examples/quarkusReflectionModels/api.yaml
+++ b/src/test/resources/examples/quarkusReflectionModels/api.yaml
@@ -1,184 +1,7 @@
 openapi: "3.0.0"
 info:
-  title: "API Example"
-  version: "1.0"
 paths:
-  /example-path-1:
-    get:
-      summary: "GET example path 1"
-      parameters:
-        - $ref: "#/components/parameters/QueryParam1"
-        - $ref: "#/components/parameters/QueryParam2"
-      responses:
-        200:
-          description: "successful operation"
-          headers:
-            Cache-Control:
-              $ref: "#/components/headers/CacheControl"
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/QueryResult"
-
-    post:
-      summary: "POST example path 1"
-      parameters:
-        - $ref: "#/components/parameters/QueryParam1"
-      requestBody:
-        $ref: "#/components/requestBodies/PostBody"
-      responses:
-        201:
-          headers:
-            Location:
-              $ref: "#/components/headers/Location"
-          description: "Successful operation"
-
-  /example-path-2/{path_param}:
-    get:
-      summary: "GET example path 2"
-      parameters:
-        - $ref: "#/components/parameters/PathParam"
-        - $ref: "#/components/parameters/QueryParam2"
-        - $ref: "#/components/parameters/IfNoneMatch"
-      responses:
-        200:
-          description: "successful operation"
-          headers:
-            Cache-Control:
-              $ref: "#/components/headers/CacheControl"
-          content:
-            application/json:
-              schema:
-                discriminator:
-                  propertyName: "model_type"
-                oneOf:
-                  - $ref: "#/components/schemas/FirstModel"
-                  - $ref: "#/components/schemas/SecondModel"
-                  - $ref: "#/components/schemas/ThirdModel"
-        304:
-          description: "Returned in conjunction with use of the If-None-Match header.\
-            \ Indicates that the resource as described by the passed etag value has\
-            \ not changed"
-    head:
-      summary: "HEAD example path 2"
-      parameters:
-        - $ref: "#/components/parameters/PathParam"
-        - $ref: "#/components/parameters/QueryParam3"
-        - $ref: "#/components/parameters/IfNoneMatch"
-      responses:
-        200:
-          description: "Record Exists"
-        304:
-          description: "Returned in conjunction with use of the If-None-Match header.\
-            \ Indicates that the resource as described by the passed etag value has\
-            \ not changed"
-
-    put:
-      summary: "PUT example path 2"
-      parameters:
-        - $ref: "#/components/parameters/PathParam"
-        - $ref: "#/components/parameters/IfMatch"
-      requestBody:
-        $ref: "#/components/requestBodies/PutBody"
-      responses:
-        204:
-          description: "Operation successful"
-
-  /example-path-3/{path_param}/subresource:
-    put:
-      summary: "PUT example path 3"
-      parameters:
-        - $ref: "#/components/parameters/QueryParam1"
-        - $ref: "#/components/parameters/PathParam"
-        - $ref: "#/components/parameters/IfMatch"
-      requestBody:
-        $ref: "#/components/requestBodies/PutBody"
-      responses:
-        204:
-          description: "Operation successful"
-
 components:
-  parameters:
-    PathParam:
-      name: "path_param"
-      description: "The resource id"
-      in: "path"
-      required: true
-      schema:
-        type: "string"
-
-    IfMatch:
-      name: "If-Match"
-      description: "The RFC7232 If-Match header field"
-      in: "header"
-      schema:
-        type: "string"
-      required: true
-
-    IfNoneMatch:
-      name: "If-None-Match"
-      description: "The RFC7232 If-None-Match header field"
-      in: "header"
-      schema:
-        type: "string"
-      required: false
-
-    QueryParam1:
-      name: "query_param1"
-      in: "query"
-      schema:
-        type: "array"
-        items:
-          type: "string"
-      required: false
-      allowEmptyValue: false
-
-    QueryParam2:
-      name: "query_param2"
-      in: "query"
-      schema:
-        type: integer
-      required: false
-
-    QueryParam3:
-      name: "query_param3"
-      in: "query"
-      schema:
-        type: boolean
-      required: false
-
-  headers:
-    Location:
-      description: "The Location header indicates the URL of a newly created resource"
-      schema:
-        type: "string"
-
-    CacheControl:
-      description: "The RFC7234 Cache Control header"
-      schema:
-        type: "string"
-      example: "must-revalidate, max-age=5"
-
-  requestBodies:
-    PostBody:
-      required: true
-      content:
-        application/json:
-          schema:
-            discriminator:
-              propertyName: "model_type"
-            oneOf:
-              - $ref: "#/components/schemas/FirstModel"
-              - $ref: "#/components/schemas/SecondModel"
-              - $ref: "#/components/schemas/ThirdModel"
-    PutBody:
-      required: true
-      content:
-        application/json:
-          schema:
-            $ref: "#/components/schemas/FirstModel"
-
-
   schemas:
     QueryResult:
       type: "object"
@@ -219,7 +42,7 @@ components:
           readOnly: true
         third_attr:
           type: "string"
-          x-extensible-enum:
+          enum:
             - "enum_type_1"
             - "enum_type_2"
           description: "Enum types for attribute 3"
@@ -231,7 +54,7 @@ components:
         model_type:
           type: "string"
           description: "The model discrimination type"
-          x-extensible-enum:
+          enum:
             - "first_model"
             - "second_model"
             - "third_model"
