--- a/src/test/resources/examples/githubApi/api.yaml
+++ b/src/test/resources/examples/githubApi/api.yaml
@@ -751,7 +751,7 @@ components:
       in: query
       schema:
         type: string
-        x-extensible-enum:
+        enum:
         - active
         - inactive
         - all
@@ -1022,7 +1022,7 @@ components:
           readOnly: true
         status:
           type: string
-          x-extensible-enum:
+          enum:
           - active
           - inactive
           description: States whether the entity is currently active or inactive
@@ -1092,7 +1092,7 @@ components:
           readOnly: true
         status:
           type: string
-          x-extensible-enum:
+          enum:
           - active
           - inactive
           description: States whether the entity is currently active or inactive
@@ -1167,7 +1167,7 @@ components:
           readOnly: true
         status:
           type: string
-          x-extensible-enum:
+          enum:
           - active
           - inactive
           description: States whether the entity is currently active or inactive
@@ -1182,7 +1182,7 @@ components:
           type: string
         visibility:
           type: string
-          x-extensible-enum:
+          enum:
           - Private
           - Public
         tags:
@@ -1246,7 +1246,7 @@ components:
           readOnly: true
         status:
           type: string
-          x-extensible-enum:
+          enum:
           - active
           - inactive
           description: States whether the entity is currently active or inactive
