Issue #36: Generated class names are inconsistent for inline array objects

--- a/src/test/resources/examples/inLinedObject/api.yaml
+++ b/src/test/resources/examples/inLinedObject/api.yaml
@@ -46,3 +46,19 @@ components:
                   type: string
             direct:
               type: string
+
+    ThirdInlineObject:
+      type: object
+      properties:
+        generation:
+          type: object
+          properties:
+            urls:
+              type: array
+              items:
+                type: object
+                properties:
+                  version:
+                    type: string
+            view_name:
+              type: string
