Issue #34: Required properties with a default should not be nullable

--- a/src/test/resources/examples/defaultValues/api.yaml
+++ b/src/test/resources/examples/defaultValues/api.yaml
@@ -23,3 +23,17 @@ components:
         catch_phrase:
           type: string
           default: Cowabunga Dude
+
+    ObjectWithRequiredDefaultProperties:
+      type: object
+      required:
+        - name
+        - objectType
+      properties:
+        name:
+          type: string
+        objectType:
+          type: string
+          default: "myObjectType"
+        anotherNonRequiredProperty:
+          type: string
