Issue #34: Optional properties with a default should not be nullable (#39)
* Issue #34: Required properties with a default should not be nullable

* Fixing defaults along the following lines:
- required properties have any defaults ignored, they are required and cannot be defaulted
- optional properties with a default are not nullable, don't supply a value and the default is used

Co-authored-by: Conor Gallagher <conor.gallagher@zalando.ie>

--- a/src/test/resources/examples/defaultValues/api.yaml
+++ b/src/test/resources/examples/defaultValues/api.yaml
@@ -4,22 +4,23 @@ components:
     PersonWithDefaults:
       type: object
       required:
-        - name
+        - required_so_default_ignored
       properties:
-        name:
+        required_so_default_ignored:
           type: string
-        age:
+          default: "Some ignored default"
+        integer_default:
           type: integer
           default: 18
-        height_category:
+        enum_default:
           type: string
           enum:
             - tall
             - short
           default: tall
-        has_hair:
+        boolean_default:
           type: boolean
           default: true
-        catch_phrase:
+        string_phrase:
           type: string
           default: Cowabunga Dude
