Fixing bug with constructor when multiple objects under an allOf, but only one is the super class

--- a/src/test/resources/examples/polymorphicModels/api.yaml
+++ b/src/test/resources/examples/polymorphicModels/api.yaml
@@ -26,8 +26,16 @@ components:
     PolymorphicTypeTwo:
       allOf:
         - $ref: "#/components/schemas/PolymorphicSuperType"
+        - $ref: "#/components/schemas/AnotherObject"
         - type: object
           properties:
             child_two_age:
               type: integer
               format: int32
+              
+    AnotherObject:
+      type: object
+      properties:
+        some_integer_propery:
+          type: integer
+          format: int32
