ISSUE-81: Accept header should be picked from the content response

--- a/src/test/resources/examples/okHttpClient/api.yaml
+++ b/src/test/resources/examples/okHttpClient/api.yaml
@@ -16,7 +16,7 @@ paths:
             Cache-Control:
               $ref: "#/components/headers/CacheControl"
           content:
-            application/json:
+            application/vnd.custom.media+json:
               schema:
                 $ref: "#/components/schemas/QueryResult"
 
