Improving the Normalised String utilities. Improved generation to support ENUM values containing special characters and classes containing numbers

--- a/src/test/resources/examples/enumExamples/api.yaml
+++ b/src/test/resources/examples/enumExamples/api.yaml
@@ -44,5 +44,12 @@ components:
       x-extensible-enum:
         - active
         - inactive
+        - 
+    ContentType:
+      type: string
+      x-extensible-enum:
+        - application/json
+        - application/x.some-type+json    
+        - application/x.some-other-type+json;version=2    
 
 
