A simple oneOf definition that can not be resolved to a polymorphic definition should be treated as an any.
Closes #110

--- a/src/test/resources/examples/anyOfOneOfAllOf/api.yaml
+++ b/src/test/resources/examples/anyOfOneOfAllOf/api.yaml
@@ -1,6 +1,12 @@
 openapi: 3.0.0
 components:
   schemas:
+    SimpleOneOfs:
+      type: object
+      properties: 
+        oneof_property:
+          $ref: '#/components/schemas/ContainsNestedOneOf'
+
     ComplexParent:
       allOf:
         - $ref: '#/components/schemas/ContainsNestedOneOf'
