ISSUE-119: Support naming http client methods after the operationId

--- a/src/test/resources/examples/okHttpClient/api.yaml
+++ b/src/test/resources/examples/okHttpClient/api.yaml
@@ -60,6 +60,7 @@ paths:
             \ Indicates that the resource as described by the passed etag value has\
             \ not changed"
     head:
+      operationId: headOperationIdExample
       summary: "HEAD example path 2"
       parameters:
         - $ref: "#/components/parameters/PathParam"
