fix and extend test

--- a/src/test/resources/examples/okHttpClientPostWithoutRequestBody/api.yaml
+++ b/src/test/resources/examples/okHttpClientPostWithoutRequestBody/api.yaml
@@ -4,7 +4,15 @@ info:
   version: "1.0"
 paths:
   /example:
+    put:
+      responses:
+        '204':
+          description: example
     post:
+      responses:
+        '204':
+          description: example
+    patch:
       responses:
         '204':
           description: example
