Fix handling of default values. - URI format string types did correctly handle default values. It produced compile-time errors because of: `uriType: URI = "http://some-uri"`. - Default handling of parameters in generated clients was also incorrect, this has code path now uses the same default handling logic which has been moved to a dedicated class.

--- a/src/test/resources/examples/defaultValues/api.yaml
+++ b/src/test/resources/examples/defaultValues/api.yaml
@@ -24,3 +24,12 @@ components:
         string_phrase:
           type: string
           default: Cowabunga Dude
+        uri_type:
+          type: string
+          format: uri
+          description: |
+            An absolute URI that identifies the problem type.  When dereferenced,
+            it SHOULD provide human-readable documentation for the problem type
+            (e.g., using HTML).
+          default: 'about:blank'
+          example: 'https://zalando.github.io/problem/constraint-violation'
