Handle required:true in spring ctrl for date + date-time fields

--- a/src/test/resources/examples/springFormatDateAndDateTime/api.yaml
+++ b/src/test/resources/examples/springFormatDateAndDateTime/api.yaml
@@ -8,7 +8,7 @@ paths:
       parameters:
         - in: query
           name: aDate
-          required: true
+          required: false
           schema:
             type: string
             format: date
