--- a/src/test/resources/authenticationTest/operation_authentication_with_global.yml
+++ b/src/test/resources/authenticationTest/operation_authentication_with_global.yml
@@ -11,10 +11,10 @@ paths:
         - BasicAuth: [ ]
       parameters:
         - in: query
-          name: testDTO
+          name: testString
           required: true
           schema:
-            $ref: '#/components/schemas/testDTO'
+            type: string
       responses:
         '200':
           description: generateTestModel 200 response
@@ -25,10 +25,10 @@ paths:
         - { }
       parameters:
         - in: query
-          name: testDTO
+          name: testString
           required: true
           schema:
-            $ref: '#/components/schemas/testDTO'
+            type: string
       responses:
         '200':
           description: generateTestModel 200 response
@@ -40,10 +40,10 @@ paths:
         - { }
       parameters:
         - in: query
-          name: testDTO
+          name: testString
           required: true
           schema:
-            $ref: '#/components/schemas/testDTO'
+            type: string
       responses:
         '200':
           description: generateTestModel 200 response
@@ -54,10 +54,10 @@ paths:
         [ ]
       parameters:
         - in: query
-          name: testDTO
+          name: testString
           required: true
           schema:
-            $ref: '#/components/schemas/testDTO'
+            type: string
       responses:
         '200':
           description: generateTestModel 200 response
@@ -66,10 +66,10 @@ paths:
       operationId: testPath
       parameters:
         - in: query
-          name: testDTO
+          name: testString
           required: true
           schema:
-            $ref: '#/components/schemas/testDTO'
+            type: string
       responses:
         '200':
           description: generateTestModel 200 response
@@ -78,13 +78,5 @@ components:
     BasicAuth:
       type: http
       scheme: basic
-  schemas:
-    testDTO:
-      properties:
-        testProperty:
-          type: boolean
-      required:
-        - testProperty
-      type: object
 security:
   - basicAuth: [ ]
