Added support for both `mapping` and `anyOf` for polymorphy.

--- a/src/test/resources/examples/enumPolymorphicDiscriminator/api.yaml
+++ b/src/test/resources/examples/enumPolymorphicDiscriminator/api.yaml
@@ -19,6 +19,23 @@ components:
           obj_two_first: '#/components/schemas/ConcreteImplTwo'
           obj_two_second: '#/components/schemas/ConcreteImplTwo'
           obj_three: '#/components/schemas/ConcreteImplThree'
+      anyOf:
+        - $ref: '#/components/schemas/ConcreteImplOne'
+        - $ref: '#/components/schemas/ConcreteImplTwo'
+        - $ref: '#/components/schemas/ConcreteImplTwo'
+        - $ref: '#/components/schemas/ConcreteImplThree'
+      properties:
+        some_enum:
+          $ref: '#/components/schemas/EnumDiscriminator'
+    polymorphicEnumDiscriminatorLegacy:
+      type: object
+      discriminator:
+        propertyName: some_enum
+        mapping:
+          obj_one_only: '#/components/schemas/ConcreteImplOneLegacy'
+          obj_two_first: '#/components/schemas/ConcreteImplTwoLegacy'
+          obj_two_second: '#/components/schemas/ConcreteImplTwoLegacy'
+          obj_three: '#/components/schemas/ConcreteImplThreeLegacy'
       properties:
         some_enum:
           $ref: '#/components/schemas/EnumDiscriminator'
@@ -43,6 +60,26 @@ components:
       allOf:
         - $ref: '#/components/schemas/polymorphicEnumDiscriminator'
 
+    ConcreteImplOneLegacy:
+      allOf:
+        - $ref: '#/components/schemas/polymorphicEnumDiscriminatorLegacy'
+        - type: object
+          properties:
+            some_prop:
+              type: string
+
+    ConcreteImplTwoLegacy:
+      allOf:
+        - $ref: '#/components/schemas/polymorphicEnumDiscriminatorLegacy'
+        - type: object
+          properties:
+            some_prop:
+              type: string
+
+    ConcreteImplThreeLegacy:
+      allOf:
+        - $ref: '#/components/schemas/polymorphicEnumDiscriminatorLegacy'
+
     EnumDiscriminator:
       type: string
       enum:
@@ -50,6 +87,3 @@ components:
         - obj_two_first
         - obj_two_second
         - obj_three
-
-
-
